--- a/docs/docs-ref-autogen/word/word.inlinepicture.yml
+++ b/docs/docs-ref-autogen/word/word.inlinepicture.yml
@@ -25,6 +25,7 @@ items:
       - word.Word.InlinePicture.getRange_1
       - word.Word.InlinePicture.height
       - word.Word.InlinePicture.hyperlink
+      - word.Word.InlinePicture.imageFormat
       - word.Word.InlinePicture.insertBreak
       - word.Word.InlinePicture.insertBreak_1
       - word.Word.InlinePicture.insertContentControl
@@ -319,6 +320,22 @@ items:
       return:
         type:
           - string
+  - uid: word.Word.InlinePicture.imageFormat
+    summary: |-
+      获取嵌入式图像的格式。 只读。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: imageFormat
+    fullName: imageFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'readonly imageFormat: Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg";'
+      return:
+        type:
+          - Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg"
   - uid: word.Word.InlinePicture.insertBreak
     summary: |-
       在主文档的指定位置插入分隔符。 insertLocation 值可以为“Before”或“After”。
@@ -403,7 +420,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .docx 文件的 base64 编码内容。
+          description: 必需。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocation
@@ -428,7 +445,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .docx 文件的 base64 编码内容。
+          description: 必需。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocationString
@@ -487,7 +504,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: word.Word.InlinePicture.insertInlinePictureFromBase64
     summary: |-
-      在指定位置插入 inlinePicture。 insertLocation 值可以是 "Replace"、"Before" 或 "After"。
+      在指定位置插入 inlinePicture。 InsertLocation 值可以是 "Replace"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertInlinePictureFromBase64(base64EncodedImage, insertLocation)'
@@ -512,7 +529,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.InlinePicture.insertInlinePictureFromBase64_1
     summary: |-
-      在指定位置插入 inlinePicture。 insertLocation 值可以是 "Replace"、"Before" 或 "After"。
+      在指定位置插入 inlinePicture。 InsertLocation 值可以是 "Replace"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertInlinePictureFromBase64(base64EncodedImage, insertLocationString)'
@@ -694,7 +711,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Word.InlinePicture`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.InlinePicture`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.InlinePicture`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
