--- a/docs/docs-ref-autogen/word/word.interfaces.documentdata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.documentdata.yml
@@ -11,9 +11,11 @@ items:
     children:
       - word.Word.Interfaces.DocumentData.body
       - word.Word.Interfaces.DocumentData.contentControls
+      - word.Word.Interfaces.DocumentData.customXmlParts
       - word.Word.Interfaces.DocumentData.properties
       - word.Word.Interfaces.DocumentData.saved
       - word.Word.Interfaces.DocumentData.sections
+      - word.Word.Interfaces.DocumentData.settings
   - uid: word.Word.Interfaces.DocumentData.body
     summary: |-
       获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。 只读。
@@ -44,6 +46,22 @@ items:
       return:
         type:
           - 'Word.Interfaces.ContentControlData[]'
+  - uid: word.Word.Interfaces.DocumentData.customXmlParts
+    summary: |-
+      获取文档中的自定义 XML 部件。 只读。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: customXmlParts
+    fullName: customXmlParts
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'customXmlParts?: Word.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Word.Interfaces.CustomXmlPartData[]'
   - uid: word.Word.Interfaces.DocumentData.properties
     summary: |-
       获取文档的属性。 只读。
@@ -89,3 +107,19 @@ items:
       return:
         type:
           - 'Word.Interfaces.SectionData[]'
+  - uid: word.Word.Interfaces.DocumentData.settings
+    summary: |-
+      获取文档中的加载项设置。 只读。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: settings
+    fullName: settings
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'settings?: Word.Interfaces.SettingData[];'
+      return:
+        type:
+          - 'Word.Interfaces.SettingData[]'
