--- a/docs/docs-ref-autogen/outlook_1_3/office.roamingsettings.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.roamingsettings.yml
@@ -8,9 +8,9 @@ items:
 
       设置的名称是一个字符串，而值可以是字符串、数字、布尔值、null 值、对象或数组。
 
-      RoamingSettings 对象可通过 RoamingSettings 属性在命名空间中进行访问。
+      RoamingSettings 对象可通过 roamingSettings 属性在命名空间中进行访问。
 
-      **重要说明**: 只有在首次加载加载项时, 才会从持久化存储初始化 RoamingSettings 对象。 对于任务窗格, 这意味着仅在第一次打开任务窗格时才会对其进行初始化。 如果任务窗格导航到另一个页面或重新加载当前页面, 则内存中的对象将重置为其初始值, 即使您的外接程序具有持续的更改也是如此。 在关闭并重新打开任务窗格之前, 保留的更改将不可用。
+      **重要说明**: 只有在首次加载加载项时, 才会从持久化存储初始化 RoamingSettings 对象。 对于任务窗格, 这意味着仅在第一次打开任务窗格时才会对其进行初始化。 如果任务窗格导航到另一个页面或重新加载当前页面, 则内存中的对象将重置为其初始值, 即使您的外接程序具有持续的更改也是如此。 在关闭并重新打开任务窗格 (或在 UI 较少的加载项的情况下) 之前, 保留的更改将不可用。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
