--- a/docs/docs-ref-autogen/word.yml
+++ b/docs/docs-ref-autogen/word.yml
@@ -18,9 +18,13 @@ items:
       - word.Word.ContentControl
       - word.Word.ContentControlAppearance
       - word.Word.ContentControlCollection
+      - word.Word.ContentControlEventArgs
       - word.Word.ContentControlType
       - word.Word.CustomProperty
       - word.Word.CustomPropertyCollection
+      - word.Word.CustomXmlPart
+      - word.Word.CustomXmlPartCollection
+      - word.Word.CustomXmlPartScopedCollection
       - word.Word.Document
       - word.Word.DocumentCreated
       - word.Word.DocumentProperties
@@ -50,6 +54,14 @@ items:
       - word.Word.Interfaces.CustomPropertyData
       - word.Word.Interfaces.CustomPropertyLoadOptions
       - word.Word.Interfaces.CustomPropertyUpdateData
+      - word.Word.Interfaces.CustomXmlPartCollectionData
+      - word.Word.Interfaces.CustomXmlPartCollectionLoadOptions
+      - word.Word.Interfaces.CustomXmlPartCollectionUpdateData
+      - word.Word.Interfaces.CustomXmlPartData
+      - word.Word.Interfaces.CustomXmlPartLoadOptions
+      - word.Word.Interfaces.CustomXmlPartScopedCollectionData
+      - word.Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
+      - word.Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
       - word.Word.Interfaces.DocumentCreatedData
       - word.Word.Interfaces.DocumentCreatedLoadOptions
       - word.Word.Interfaces.DocumentCreatedUpdateData
@@ -97,6 +109,12 @@ items:
       - word.Word.Interfaces.SectionData
       - word.Word.Interfaces.SectionLoadOptions
       - word.Word.Interfaces.SectionUpdateData
+      - word.Word.Interfaces.SettingCollectionData
+      - word.Word.Interfaces.SettingCollectionLoadOptions
+      - word.Word.Interfaces.SettingCollectionUpdateData
+      - word.Word.Interfaces.SettingData
+      - word.Word.Interfaces.SettingLoadOptions
+      - word.Word.Interfaces.SettingUpdateData
       - word.Word.Interfaces.TableBorderData
       - word.Word.Interfaces.TableBorderLoadOptions
       - word.Word.Interfaces.TableBorderUpdateData
@@ -138,6 +156,8 @@ items:
       - word.Word.Section
       - word.Word.SectionCollection
       - word.Word.SelectionMode
+      - word.Word.Setting
+      - word.Word.SettingCollection
       - word.Word.Style
       - word.Word.Table
       - word.Word.TableBorder
@@ -164,11 +184,11 @@ items:
         description: ''
       parameters:
         - id: objects
-          description: '以前创建的 API 对象的数组。 将验证该数组, 以确保所有对象都共享相同的上下文。 批处理将使用此共享 RequestContext, 这意味着应用于这些对象的任何更改都将由 "context. sync ()" 选取。'
+          description: '以前创建的 API 对象的数组。 将验证该数组, 以确保所有对象都共享相同的上下文。 批处理将使用此共享 RequestContext, 这意味着应用于这些对象的任何更改都将由 "context。 sync ()" 选取。'
           type:
             - 'OfficeExtension.ClientObject[]'
         - id: batch
-          description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。'
+          description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。 Context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
   - uid: word.Word.run_1
@@ -190,7 +210,7 @@ items:
           type:
             - office.OfficeExtension.ClientObject
         - id: batch
-          description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。'
+          description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。 Context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
   - uid: word.Word.run_2
@@ -198,7 +218,7 @@ items:
     remarks: |-
       除了此签名之外, 此方法还具有以下签名, 使您可以使用以前创建的对象的请求上下文恢复:
 
-      run<T>(object: officeextension.error, batch: (context: RequestContext) =<!-- -->&gt;承诺<T>): 承诺<T>;
+      run<T>(Object: officeextension.error, batch: (Context: RequestContext) =<!-- -->&gt;承诺<T>): 承诺<T>;
 
       run<T>(对象: officeextension.error\[\], batch: (context: RequestContext) =<!-- -->&gt;承诺<T>): 承诺<T>;
     name: Word.run_2
@@ -214,7 +234,7 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context. sync ()" 的结果)。 context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。'
+          description: '一个采用 RequestContext 的函数, 并返回一个承诺 (通常只是 "context。 sync ()" 的结果)。 Context 参数可促进对 Word 应用程序的请求。 由于 Office 加载项和 Word 应用程序在两个不同的进程中运行, 因此需要 RequestContext 以从外接程序获取对 Word 对象模型的访问权限。'
           type:
             - '(context: Word.RequestContext) => Promise<T>'
 references:
@@ -240,12 +260,20 @@ references:
     name: Word.ContentControlAppearance
   - uid: word.Word.ContentControlCollection
     name: Word.ContentControlCollection
+  - uid: word.Word.ContentControlEventArgs
+    name: Word.ContentControlEventArgs
   - uid: word.Word.ContentControlType
     name: Word.ContentControlType
   - uid: word.Word.CustomProperty
     name: Word.CustomProperty
   - uid: word.Word.CustomPropertyCollection
     name: Word.CustomPropertyCollection
+  - uid: word.Word.CustomXmlPart
+    name: Word.CustomXmlPart
+  - uid: word.Word.CustomXmlPartCollection
+    name: Word.CustomXmlPartCollection
+  - uid: word.Word.CustomXmlPartScopedCollection
+    name: Word.CustomXmlPartScopedCollection
   - uid: word.Word.Document
     name: Word.Document
   - uid: word.Word.DocumentCreated
@@ -304,6 +332,22 @@ references:
     name: Word.Interfaces.CustomPropertyLoadOptions
   - uid: word.Word.Interfaces.CustomPropertyUpdateData
     name: Word.Interfaces.CustomPropertyUpdateData
+  - uid: word.Word.Interfaces.CustomXmlPartCollectionData
+    name: Word.Interfaces.CustomXmlPartCollectionData
+  - uid: word.Word.Interfaces.CustomXmlPartCollectionLoadOptions
+    name: Word.Interfaces.CustomXmlPartCollectionLoadOptions
+  - uid: word.Word.Interfaces.CustomXmlPartCollectionUpdateData
+    name: Word.Interfaces.CustomXmlPartCollectionUpdateData
+  - uid: word.Word.Interfaces.CustomXmlPartData
+    name: Word.Interfaces.CustomXmlPartData
+  - uid: word.Word.Interfaces.CustomXmlPartLoadOptions
+    name: Word.Interfaces.CustomXmlPartLoadOptions
+  - uid: word.Word.Interfaces.CustomXmlPartScopedCollectionData
+    name: Word.Interfaces.CustomXmlPartScopedCollectionData
+  - uid: word.Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
+    name: Word.Interfaces.CustomXmlPartScopedCollectionLoadOptions
+  - uid: word.Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
+    name: Word.Interfaces.CustomXmlPartScopedCollectionUpdateData
   - uid: word.Word.Interfaces.DocumentCreatedData
     name: Word.Interfaces.DocumentCreatedData
   - uid: word.Word.Interfaces.DocumentCreatedLoadOptions
@@ -398,6 +442,18 @@ references:
     name: Word.Interfaces.SectionLoadOptions
   - uid: word.Word.Interfaces.SectionUpdateData
     name: Word.Interfaces.SectionUpdateData
+  - uid: word.Word.Interfaces.SettingCollectionData
+    name: Word.Interfaces.SettingCollectionData
+  - uid: word.Word.Interfaces.SettingCollectionLoadOptions
+    name: Word.Interfaces.SettingCollectionLoadOptions
+  - uid: word.Word.Interfaces.SettingCollectionUpdateData
+    name: Word.Interfaces.SettingCollectionUpdateData
+  - uid: word.Word.Interfaces.SettingData
+    name: Word.Interfaces.SettingData
+  - uid: word.Word.Interfaces.SettingLoadOptions
+    name: Word.Interfaces.SettingLoadOptions
+  - uid: word.Word.Interfaces.SettingUpdateData
+    name: Word.Interfaces.SettingUpdateData
   - uid: word.Word.Interfaces.TableBorderData
     name: Word.Interfaces.TableBorderData
   - uid: word.Word.Interfaces.TableBorderLoadOptions
@@ -474,6 +530,10 @@ references:
     name: Word.SectionCollection
   - uid: word.Word.SelectionMode
     name: Word.SelectionMode
+  - uid: word.Word.Setting
+    name: Word.Setting
+  - uid: word.Word.SettingCollection
+    name: Word.SettingCollection
   - uid: word.Word.Style
     name: Word.Style
   - uid: word.Word.Table
