--- a/docs/docs-ref-autogen/word/word.interfaces.documentcreateddata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.documentcreateddata.yml
@@ -11,14 +11,17 @@ items:
     children:
       - word.Word.Interfaces.DocumentCreatedData.body
       - word.Word.Interfaces.DocumentCreatedData.contentControls
+      - word.Word.Interfaces.DocumentCreatedData.customXmlParts
       - word.Word.Interfaces.DocumentCreatedData.properties
       - word.Word.Interfaces.DocumentCreatedData.saved
       - word.Word.Interfaces.DocumentCreatedData.sections
+      - word.Word.Interfaces.DocumentCreatedData.settings
   - uid: word.Word.Interfaces.DocumentCreatedData.body
     summary: |-
       获取文档的正文对象。 正文是不包括标头、页脚、脚注、文本框等的文本。 只读。
 
       \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: body
     fullName: body
     langs:
@@ -34,6 +37,7 @@ items:
       获取文档中的内容控件对象的集合。 这包括文档正文、标头、页脚、文本框等中的内容控件。 只读。
 
       \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: contentControls
     fullName: contentControls
     langs:
@@ -44,11 +48,28 @@ items:
       return:
         type:
           - 'Word.Interfaces.ContentControlData[]'
+  - uid: word.Word.Interfaces.DocumentCreatedData.customXmlParts
+    summary: |-
+      获取文档中的自定义 XML 部件。 只读。
+
+      \[[API 集: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: customXmlParts
+    fullName: customXmlParts
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'customXmlParts?: Word.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Word.Interfaces.CustomXmlPartData[]'
   - uid: word.Word.Interfaces.DocumentCreatedData.properties
     summary: |-
       获取文档的属性。 只读。
 
       \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: properties
     fullName: properties
     langs:
@@ -64,6 +85,7 @@ items:
       指示是否已保存在文档中所做的更改。如果值为 true，表示文档自上次保存以来并未更改。只读。
 
       \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: saved
     fullName: saved
     langs:
@@ -79,6 +101,7 @@ items:
       获取文档中的节对象的集合。 只读。
 
       \[[API 集: WordApiHiddenDocument 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
     name: sections
     fullName: sections
     langs:
@@ -89,3 +112,19 @@ items:
       return:
         type:
           - 'Word.Interfaces.SectionData[]'
+  - uid: word.Word.Interfaces.DocumentCreatedData.settings
+    summary: |-
+      获取文档中的加载项设置。 只读。
+
+      \[[API 集: WordApiHiddenDocument 1.4](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: settings
+    fullName: settings
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'settings?: Word.Interfaces.SettingData[];'
+      return:
+        type:
+          - 'Word.Interfaces.SettingData[]'
