--- a/docs/docs-ref-autogen/word/word.interfaces.inlinepicturecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.inlinepicturecollectionloadoptions.yml
@@ -17,6 +17,7 @@ items:
       - word.Word.Interfaces.InlinePictureCollectionLoadOptions.altTextTitle
       - word.Word.Interfaces.InlinePictureCollectionLoadOptions.height
       - word.Word.Interfaces.InlinePictureCollectionLoadOptions.hyperlink
+      - word.Word.Interfaces.InlinePictureCollectionLoadOptions.imageFormat
       - word.Word.Interfaces.InlinePictureCollectionLoadOptions.lockAspectRatio
       - word.Word.Interfaces.InlinePictureCollectionLoadOptions.paragraph
       - word.Word.Interfaces.InlinePictureCollectionLoadOptions.parentContentControl
@@ -94,6 +95,22 @@ items:
     type: property
     syntax:
       content: 'hyperlink?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: word.Word.Interfaces.InlinePictureCollectionLoadOptions.imageFormat
+    summary: |-
+      对于集合中的每一项: 获取嵌入式图像的格式。 只读。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: imageFormat
+    fullName: imageFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'imageFormat?: boolean;'
       return:
         type:
           - boolean
