--- a/docs/docs-ref-autogen/word/word.interfaces.inlinepicturedata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.inlinepicturedata.yml
@@ -13,6 +13,7 @@ items:
       - word.Word.Interfaces.InlinePictureData.altTextTitle
       - word.Word.Interfaces.InlinePictureData.height
       - word.Word.Interfaces.InlinePictureData.hyperlink
+      - word.Word.Interfaces.InlinePictureData.imageFormat
       - word.Word.Interfaces.InlinePictureData.lockAspectRatio
       - word.Word.Interfaces.InlinePictureData.width
   - uid: word.Word.Interfaces.InlinePictureData.altTextDescription
@@ -75,6 +76,22 @@ items:
       return:
         type:
           - string
+  - uid: word.Word.Interfaces.InlinePictureData.imageFormat
+    summary: |-
+      获取嵌入式图像的格式。 只读。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: imageFormat
+    fullName: imageFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'imageFormat?: Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg";'
+      return:
+        type:
+          - Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg"
   - uid: word.Word.Interfaces.InlinePictureData.lockAspectRatio
     summary: |-
       获取或设置指示在您调整嵌入式图像大小时其是否保留原始比例的值。
