--- a/docs/docs-ref-autogen/word/word.list.yml
+++ b/docs/docs-ref-autogen/word/word.list.yml
@@ -15,7 +15,9 @@ items:
     package: word
     children:
       - word.Word.List.context
+      - word.Word.List.getLevelFont
       - word.Word.List.getLevelParagraphs
+      - word.Word.List.getLevelPicture
       - word.Word.List.getLevelString
       - word.Word.List.id
       - word.Word.List.insertParagraph
@@ -26,6 +28,7 @@ items:
       - word.Word.List.load_1
       - word.Word.List.load_2
       - word.Word.List.paragraphs
+      - word.Word.List.resetLevelFont
       - word.Word.List.setLevelAlignment
       - word.Word.List.setLevelAlignment_1
       - word.Word.List.setLevelBullet
@@ -33,6 +36,7 @@ items:
       - word.Word.List.setLevelIndents
       - word.Word.List.setLevelNumbering
       - word.Word.List.setLevelNumbering_1
+      - word.Word.List.setLevelPicture
       - word.Word.List.setLevelStartingNumber
       - word.Word.List.toJSON
       - word.Word.List.track
@@ -49,6 +53,28 @@ items:
       return:
         type:
           - RequestContext
+  - uid: word.Word.List.getLevelFont
+    summary: |-
+      获取列表中指定级别的项目符号、编号或图片的字体。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: getLevelFont(level)
+    fullName: getLevelFont(level)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getLevelFont(level: number): Word.Font;'
+      return:
+        type:
+          - word.Word.Font
+        description: ''
+      parameters:
+        - id: level
+          description: 必需。 列表中的级别。
+          type:
+            - number
   - uid: word.Word.List.getLevelParagraphs
     summary: |-
       获取列表中指定级别的段落。
@@ -64,6 +90,28 @@ items:
       return:
         type:
           - Word.ParagraphCollection
+        description: ''
+      parameters:
+        - id: level
+          description: 必需。 列表中的级别。
+          type:
+            - number
+  - uid: word.Word.List.getLevelPicture
+    summary: |-
+      获取列表中指定级别的图片的 base64 编码的字符串表示形式。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: getLevelPicture(level)
+    fullName: getLevelPicture(level)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getLevelPicture(level: number): OfficeExtension.ClientResult<string>;'
+      return:
+        type:
+          - OfficeExtension.ClientResult<string>
         description: ''
       parameters:
         - id: level
@@ -108,7 +156,7 @@ items:
           - number
   - uid: word.Word.List.insertParagraph
     summary: |-
-      在指定位置插入段落。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      在指定位置插入段落。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertParagraph(paragraphText, insertLocation)'
@@ -133,7 +181,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.List.insertParagraph_1
     summary: |-
-      在指定位置插入段落。 insertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      在指定位置插入段落。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertParagraph(paragraphText, insertLocationString)'
@@ -195,7 +243,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Word.List`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.List`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.List`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -263,6 +311,32 @@ items:
       return:
         type:
           - Word.ParagraphCollection
+  - uid: word.Word.List.resetLevelFont
+    summary: |-
+      重置列表中指定级别的项目符号、编号或图片的字体。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: 'resetLevelFont(level, resetFontName)'
+    fullName: 'resetLevelFont(level, resetFontName)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'resetLevelFont(level: number, resetFontName?: boolean): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: level
+          description: 必需。 列表中的级别。
+          type:
+            - number
+        - id: resetFontName
+          description: '可选。 指示是否重置字体名称。 默认值为 false, 表示字体名称保持不变。'
+          type:
+            - boolean
   - uid: word.Word.List.setLevelAlignment
     summary: |-
       设置列表中指定级别的项目符号、编号或图片的对齐方式。
@@ -434,7 +508,7 @@ items:
           type:
             - word.Word.ListNumbering
         - id: formatString
-          description: '可选。 定义为字符串数组和/或整数的编号字符串格式。 每个整数都是高于或等于此级别的数字类型的级别。 例如, \["("、level-1、"."、level、")"\]的数组可以定义 "(2. c)" 的格式, 其中2是父级的项号, 而 c 是此级别的项号。'
+          description: '可选。 定义为字符串数组和/或整数的编号字符串格式。 每个整数都是高于或等于此级别的数字类型的级别。 例如, \["("、level-1、"。"、level、")"\]的数组可以定义 "(2。 c)" 的格式, 其中2是父级的项号, 而 c 是此级别的项号。'
           type:
             - Array<string | number>
   - uid: word.Word.List.setLevelNumbering_1
@@ -463,9 +537,35 @@ items:
           type:
             - '"None" | "Arabic" | "UpperRoman" | "LowerRoman" | "UpperLetter" | "LowerLetter"'
         - id: formatString
-          description: '可选。 定义为字符串数组和/或整数的编号字符串格式。 每个整数都是高于或等于此级别的数字类型的级别。 例如, \["("、level-1、"."、level、")"\]的数组可以定义 "(2. c)" 的格式, 其中2是父级的项号, 而 c 是此级别的项号。'
+          description: '可选。 定义为字符串数组和/或整数的编号字符串格式。 每个整数都是高于或等于此级别的数字类型的级别。 例如, \["("、level-1、"。"、level、")"\]的数组可以定义 "(2。 c)" 的格式, 其中2是父级的项号, 而 c 是此级别的项号。'
           type:
             - Array<string | number>
+  - uid: word.Word.List.setLevelPicture
+    summary: |-
+      设置列表中指定级别的图片。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: 'setLevelPicture(level, base64EncodedImage)'
+    fullName: 'setLevelPicture(level, base64EncodedImage)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'setLevelPicture(level: number, base64EncodedImage?: string): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: level
+          description: 必需。 列表中的级别。
+          type:
+            - number
+        - id: base64EncodedImage
+          description: '可选。 要设置的 base64 编码的图像。 如果未指定, 则设置默认图片。'
+          type:
+            - string
   - uid: word.Word.List.setLevelStartingNumber
     summary: |-
       设置 list 中指定级别的起始编号。 默认值为 1。
@@ -492,7 +592,7 @@ items:
           type:
             - number
   - uid: word.Word.List.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Word. List 对象是一个 API 对象, 但`toJSON`该方法返回一个简单的 JavaScript 对象 (类型为`Word.Interfaces.ListData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Word。 List 对象是一个 API 对象, 但`toJSON`该方法返回一个简单的 JavaScript 对象 (类型为`Word.Interfaces.ListData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
     name: toJSON()
     fullName: toJSON()
     langs:
