--- a/docs/docs-ref-autogen/word/word.tablerow.yml
+++ b/docs/docs-ref-autogen/word/word.tablerow.yml
@@ -27,12 +27,14 @@ items:
       - word.Word.TableRow.getNext
       - word.Word.TableRow.getNextOrNullObject
       - word.Word.TableRow.horizontalAlignment
+      - word.Word.TableRow.insertContentControl
       - word.Word.TableRow.insertRows
       - word.Word.TableRow.insertRows_1
       - word.Word.TableRow.isHeader
       - word.Word.TableRow.load
       - word.Word.TableRow.load_1
       - word.Word.TableRow.load_2
+      - word.Word.TableRow.merge
       - word.Word.TableRow.parentTable
       - word.Word.TableRow.preferredHeight
       - word.Word.TableRow.rowIndex
@@ -269,6 +271,23 @@ items:
       return:
         type:
           - Word.Alignment | "Mixed" | "Unknown" | "Left" | "Centered" | "Right" | "Justified"
+  - uid: word.Word.TableRow.insertContentControl
+    summary: |-
+      在行上插入内容控件。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: insertContentControl()
+    fullName: insertContentControl()
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'insertContentControl(): Word.ContentControl;'
+      return:
+        type:
+          - word.Word.ContentControl
+        description: ''
   - uid: word.Word.TableRow.insertRows
     summary: |-
       使用此行作为模板插入行。 如果值已指定，请将值插入新行。
@@ -351,7 +370,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Word.TableRow`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.TableRow`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.TableRow`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -404,6 +423,23 @@ items:
           description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
           type:
             - '{ select?: string; expand?: string; }'
+  - uid: word.Word.TableRow.merge
+    summary: |-
+      将行合并到一个单元格中。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: merge()
+    fullName: merge()
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'merge(): Word.TableCell;'
+      return:
+        type:
+          - Word.TableCell
+        description: ''
   - uid: word.Word.TableRow.parentTable
     summary: |-
       获取父表。 只读。
@@ -684,7 +720,7 @@ items:
         description: ''
   - uid: word.Word.TableRow.values
     summary: |-
-      获取并设置行中的文本值, 作为 2d Javascript 数组。
+      获取并设置行中的文本值, 作为 2D Javascript 数组。
 
       \[[API 集: WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: values
