commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.commentcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.commentcollection.yml
@@ -30,7 +30,7 @@ items:
       - excel.Excel.CommentCollection.toJSON
   - uid: excel.Excel.CommentCollection.add
     summary: |-
-      使用给定单元格上的给定内容创建新批注。 如果所提供的区域大于一个单元格，则会引发无效的参数错误。
+      使用给定单元格上的给定内容创建新批注。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -64,7 +64,7 @@ items:
           type:
             - string
         - id: cellAddress
-          description: '向其中添加批注的单元格。 它可以是一个 Range 对象或一个字符串。 如果是字符串, 则必须包含完整的地址, 包括工作表名称。'
+          description: '向其中添加批注的单元格。 它可以是一个 Range 对象或一个字符串。 如果是字符串, 则必须包含完整的地址, 包括工作表名称。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。'
           type:
             - Range | string
         - id: contentType
@@ -73,7 +73,7 @@ items:
             - excel.Excel.ContentType
   - uid: excel.Excel.CommentCollection.add_1
     summary: |-
-      使用给定单元格上的给定内容创建新批注。 如果所提供的区域大于一个单元格，则会引发无效的参数错误。
+      使用给定单元格上的给定内容创建新批注。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -94,7 +94,7 @@ items:
           type:
             - string
         - id: cellAddress
-          description: '向其中添加批注的单元格。 它可以是一个 Range 对象或一个字符串。 如果是字符串, 则必须包含完整的地址, 包括工作表名称。'
+          description: '向其中添加批注的单元格。 它可以是一个 Range 对象或一个字符串。 如果是字符串, 则必须包含完整的地址, 包括工作表名称。 如果`InvalidArgument`提供的范围大于一个单元格, 则会引发错误。'
           type:
             - Range | string
         - id: contentTypeString
