--- a/docs/docs-ref-autogen/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel/excel.range.yml
@@ -306,7 +306,7 @@ items:
           - number
   - uid: excel.Excel.Range.columnHidden
     summary: |-
-      表示当前区域中的所有列是否隐藏。
+      表示当前 range 的所有列均已隐藏。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnHidden
@@ -606,7 +606,7 @@ items:
           type:
             - string
         - id: criteria
-          description: 其他条件。
+          description: '其他搜索条件, 包括搜索方向以及搜索是否需要匹配整个单元格或是否区分大小写。'
           type:
             - excel.Excel.SearchCriteria
   - uid: excel.Excel.Range.findOrNullObject
@@ -656,7 +656,7 @@ items:
           type:
             - string
         - id: criteria
-          description: 其他条件。
+          description: '其他搜索条件, 包括搜索方向以及搜索是否需要匹配整个单元格或是否区分大小写。'
           type:
             - excel.Excel.SearchCriteria
   - uid: excel.Excel.Range.flashFill
@@ -722,7 +722,7 @@ items:
           - 'any[][]'
   - uid: excel.Excel.Range.formulasR1C1
     summary: |-
-      表示采用 R1C1 样式表示法的公式。 将公式设置为区域时, value 参数可以是单个值 (字符串), 也可以是二维数组。 如果参数是单个值, 它将应用于区域中的所有单元格。
+      表示采用 R1C1 表示法的公式。 将公式设置为区域时, value 参数可以是单个值 (字符串), 也可以是二维数组。 如果参数是单个值, 它将应用于区域中的所有单元格。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasR1C1
@@ -1793,7 +1793,7 @@ items:
           ```
       parameters:
         - id: valuesOnly
-          description: '仅将有值的单元格视为已使用的单元格。 \[Api 集: ExcelApi 1.2\]'
+          description: '仅将有值的单元格视为已使用的单元格。 \[Api 集: ExcelApi 1。2\]'
           type:
             - boolean
   - uid: excel.Excel.Range.getUsedRangeOrNullObject
@@ -1889,7 +1889,7 @@ items:
           - boolean
   - uid: excel.Excel.Range.height
     summary: |-
-      返回以磅为单位的距离, 100 以磅为单位, 从区域的上边缘到区域的下边缘之间的距离 (以磅为单位)。 只读。
+      返回从区域的上边缘到区域的下边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -2057,7 +2057,7 @@ items:
           - boolean
   - uid: excel.Excel.Range.left
     summary: |-
-      返回以磅为单位的距离, 以磅为单位, 从工作表左边缘到区域左边缘的 100% 缩放。 只读。
+      返回从工作表的左边缘到区域的左边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -2211,7 +2211,7 @@ items:
             - '{ select?: string; expand?: string; }'
   - uid: excel.Excel.Range.merge
     summary: |-
-      将范围单元格合并到工作表的一个区域内。
+      在工作表中，将 range 单元格合并到一个区域中。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: merge(across)
@@ -2380,7 +2380,7 @@ items:
           - number
   - uid: excel.Excel.Range.rowHidden
     summary: |-
-      表示当前区域中的所有行是否隐藏。
+      表示当前 range 的所有行均已隐藏。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHidden
@@ -2698,7 +2698,7 @@ items:
         description: ''
   - uid: excel.Excel.Range.top
     summary: |-
-      返回以磅为单位的距离, 以磅为单位, 从工作表的上边缘到区域的上边缘之间的 100% 缩放。 只读。
+      返回从工作表的上边缘到区域的上边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -2827,7 +2827,7 @@ items:
           - 'Excel.RangeValueType[][]'
   - uid: excel.Excel.Range.width
     summary: |-
-      返回以磅为单位的距离, 以磅为单位, 从区域的左边缘到范围的右边缘之间的 100% 缩放。 只读。
+      返回从区域的左边缘到区域的右边缘的 100％ 缩放的距离（以磅为单位）。 只读。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
