--- a/docs/docs-ref-autogen/excel/excel.worksheet.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheet.yml
@@ -338,7 +338,7 @@ items:
           type:
             - string
         - id: criteria
-          description: 其他条件。
+          description: '其他搜索条件, 包括搜索是否需要匹配整个单元格或是否区分大小写。'
           type:
             - excel.Excel.WorksheetSearchCriteria
   - uid: excel.Excel.Worksheet.findAllOrNullObject
@@ -384,7 +384,7 @@ items:
           type:
             - string
         - id: criteria
-          description: 其他条件。
+          description: '其他搜索条件, 包括搜索是否需要匹配整个单元格或是否区分大小写。'
           type:
             - excel.Excel.WorksheetSearchCriteria
   - uid: excel.Excel.Worksheet.freezePanes
@@ -753,7 +753,7 @@ items:
           ```
       parameters:
         - id: valuesOnly
-          description: '可选。 如果为 true, 则仅考虑值为已使用单元格的单元格 (忽略格式设置)。 \[Api 集: ExcelApi 1.2\]'
+          description: '可选。 如果为 true, 则仅考虑值为已使用单元格的单元格 (忽略格式设置)。 \[Api 集: ExcelApi 1。2\]'
           type:
             - boolean
   - uid: excel.Excel.Worksheet.getUsedRangeOrNullObject
@@ -1028,7 +1028,7 @@ items:
           ```
   - uid: excel.Excel.Worksheet.onColumnSorted
     summary: |-
-      对列进行排序时发生。
+      在列上排序时发生。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -1107,7 +1107,7 @@ items:
           - OfficeExtension.EventHandlers<Excel.WorksheetFormatChangedEventArgs>
   - uid: excel.Excel.Worksheet.onRowSorted
     summary: |-
-      对行进行排序时发生。
+      在行上排序时发生。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -1155,7 +1155,7 @@ items:
           ```
   - uid: excel.Excel.Worksheet.onSingleClicked
     summary: |-
-      当工作表中发生左击或点击操作时发生。
+      在工作表中进行左键单击/点击操作时发生。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
