--- a/docs/docs-ref-autogen/excel_release/excel.worksheet.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.worksheet.yml
@@ -316,7 +316,7 @@ items:
           type:
             - string
         - id: criteria
-          description: 其他条件。
+          description: '其他搜索条件, 包括搜索是否需要匹配整个单元格或是否区分大小写。'
           type:
             - excel.Excel.WorksheetSearchCriteria
   - uid: excel_release.Excel.Worksheet.findAllOrNullObject
@@ -362,7 +362,7 @@ items:
           type:
             - string
         - id: criteria
-          description: 其他条件。
+          description: '其他搜索条件, 包括搜索是否需要匹配整个单元格或是否区分大小写。'
           type:
             - excel.Excel.WorksheetSearchCriteria
   - uid: excel_release.Excel.Worksheet.freezePanes
@@ -731,7 +731,7 @@ items:
           ```
       parameters:
         - id: valuesOnly
-          description: '可选。 如果为 true, 则仅考虑值为已使用单元格的单元格 (忽略格式设置)。 \[Api 集: ExcelApi 1.2\]'
+          description: '可选。 如果为 true, 则仅考虑值为已使用单元格的单元格 (忽略格式设置)。 \[Api 集: ExcelApi 1。2\]'
           type:
             - boolean
   - uid: excel_release.Excel.Worksheet.getUsedRangeOrNullObject
