--- a/docs/docs-ref-autogen/excel_release/excel.worksheetsearchcriteria.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.worksheetsearchcriteria.yml
@@ -16,7 +16,7 @@ items:
       - excel_release.Excel.WorksheetSearchCriteria.matchCase
   - uid: excel_release.Excel.WorksheetSearchCriteria.completeMatch
     summary: |-
-      指定匹配必须是完整匹配还是部分匹配。 默认值为 false（部分）。
+      指定匹配必须是完整匹配还是部分匹配。 完全匹配的单元格的全部内容。 默认值为 false（部分）。
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: completeMatch
