commit translated contents

--- a/docs/docs-ref-autogen/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.messagecompose.yml
@@ -948,7 +948,7 @@ items:
 
       **注意**: 在撰写模式下, 以下客户端的 saveAsync 对约会的行为不同:
 
-      - 在撰写模式下, Mac Outlook 不支持会议上的 saveAsync。 在 Mac Outlook 中对会议调用 saveAsync 将返回错误。
+      - Outlook for Mac 不支持在撰写模式下的会议上的 saveAsync。 因此, 在该方案中调用 saveAsync 将返回错误。 若要解决此问题, 请参阅[使用 OFFICE JS API 将会议保存为 Outlook For Mac 中的草稿](https://support.microsoft.com/help/4505745)。
 
       - 在撰写模式下对约会调用 saveAsync 时, web 上的 Outlook 将始终发送邀请或更新。
 
@@ -993,7 +993,7 @@ items:
 
       **注意**: 在撰写模式下, 以下客户端的 saveAsync 对约会的行为不同:
 
-      - 在撰写模式下, Mac Outlook 不支持会议上的 saveAsync。 在 Mac Outlook 中对会议调用 saveAsync 将返回错误。
+      - Outlook for Mac 不支持在撰写模式下的会议上的 saveAsync。 因此, 在该方案中调用 saveAsync 将返回错误。 若要解决此问题, 请参阅[使用 OFFICE JS API 将会议保存为 Outlook For Mac 中的草稿](https://support.microsoft.com/help/4505745)。
 
       - 在撰写模式下对约会调用 saveAsync 时, web 上的 Outlook 将始终发送邀请或更新。
 
