commit translated contents

--- a/docs/docs-ref-autogen/office/office.addincommands.event.yml
+++ b/docs/docs-ref-autogen/office/office.addincommands.event.yml
@@ -27,7 +27,7 @@ items:
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
-      邮箱1.3 不包含参数, `options`而邮箱预览不支持`options`参数)
+      邮箱1.3 没有参数, `options`而邮箱预览不支持`options`参数。
 
       #### <a name="examples"></a>示例
 
@@ -63,16 +63,16 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'completed(options?: { allowEvent: boolean }): void;'
+      content: 'completed(options?: EventCompletedOptions): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: options
-          description: '可选。 包含一个或多个以下属性的对象文本。 allowEvent: 布尔值。 当使用完成的方法来使事件处理程序的完成信号时, 此值指示已处理事件应继续执行或被取消。 例如, 处理 ItemSend 事件的外接程序可以设置 allowEvent = false 以取消发送邮件。'
+          description: '可选。 一个对象, 用于指定事件完成时的行为选项。'
           type:
-            - '{ allowEvent: boolean }'
+            - office.Office.AddinCommands.EventCompletedOptions
   - uid: office.Office.AddinCommands.Event.source
     summary: 有关触发调用此函数的控件的信息。
     remarks: |-
