--- a/docs/docs-ref-autogen/office.yml
+++ b/docs/docs-ref-autogen/office.yml
@@ -12,6 +12,7 @@ items:
       - office.Office.AddBindingFromPromptOptions
       - office.Office.AddBindingFromSelectionOptions
       - office.Office.AddinCommands.Event
+      - office.Office.AddinCommands.EventCompletedOptions
       - office.Office.AddinCommands.Source
       - office.Office.AsyncContextOptions
       - office.Office.AsyncResult
@@ -103,7 +104,7 @@ items:
     summary: |-
       加载运行时环境和外接程序准备好开始与应用和托管文档交互时发生。
 
-      initialize 事件侦听器函数的 reason 参数返回一个`InitializationReason`枚举值, 该值指定初始化的发生方式。 任务窗格外接程序或内容外接程序可以通过下列两种方式进行初始化：
+      Initialize 事件侦听器函数的 reason 参数返回一个`InitializationReason`枚举值, 该值指定初始化的发生方式。 任务窗格外接程序或内容外接程序可以通过下列两种方式进行初始化：
 
       - 用户刚刚将其从 Office 主机应用程序功能区的 "插入" 选项卡上的 "外接程序" 下拉列表的 "最近使用的外接程序" 部分插入, 或从 "插入外接程序" 对话框中插入。
 
@@ -115,7 +116,7 @@ items:
 
       下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。
 
-      有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
+      有关 Office 主机应用程序和服务器要求的详细信息, 请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
       *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>
 
@@ -161,7 +162,7 @@ items:
           type:
             - office.Office.InitializationReason
   - uid: office.Office.onReady
-    summary: '确保 Office JavaScript api 已准备就绪, 可供外接程序调用。 如果该框架尚未初始化, 则回拨或承诺将一直等到 Office 主机准备好接受 API 调用。 请注意, 虽然此 API 适用于 Office 外接程序, 但也可在外接程序外使用。 在这种情况下, 一旦 node.js 确定它在 Office 主机应用程序外部运行, 它将调用回调并为主机和平台解析 "null" 承诺。'
+    summary: '确保 Office JavaScript Api 已准备就绪, 可供外接程序调用。 如果该框架尚未初始化, 则回拨或承诺将一直等到 Office 主机准备好接受 API 调用。 请注意, 虽然此 API 适用于 Office 外接程序, 但也可在外接程序外使用。 在这种情况下, 一旦 node.js 确定它在 Office 主机应用程序外部运行, 它将调用回调并为主机和平台解析 "null" 承诺。'
     name: Office.onReady
     fullName: Office.onReady
     langs:
@@ -185,7 +186,7 @@ items:
 
       下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。
 
-      有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
+      有关 Office 主机应用程序和服务器要求的详细信息, 请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
       *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> </td><td> Y </td></tr> </table>
 
@@ -229,7 +230,7 @@ items:
 
       下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此方法。空的单元格表示相应的 Office 主机应用程序不支持此方法。
 
-      有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
+      有关 Office 主机应用程序和服务器要求的详细信息, 请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
       *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> 适用于设备的 OWA </th><th> Office for Mac </th></tr> <tr><td><strong>访问</strong></td><td> </td><td> Y </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>
 
@@ -288,6 +289,8 @@ references:
     name: Office.AddBindingFromSelectionOptions
   - uid: office.Office.AddinCommands.Event
     name: Office.AddinCommands.Event
+  - uid: office.Office.AddinCommands.EventCompletedOptions
+    name: Office.AddinCommands.EventCompletedOptions
   - uid: office.Office.AddinCommands.Source
     name: Office.AddinCommands.Source
   - uid: office.Office.AsyncContextOptions
